--- a/app-protheus/src/assets/data/appConfig.json
+++ b/app-protheus/src/assets/data/appConfig.json
@@ -1,6 +1,8 @@
 {
     "name": "Protheus LibCore",
     "version": "1.0.0",
-    "api_baseUrl": "http://187.72.90.194:8992/rest",
+    "api_baseUrl": "/",
+    "serverBackend": "http://187.72.90.194:8992/",
+    "restEntryPoint": "rest/",
     "productLine": "Protheus"
 }
